# proximal

./: .bazeliskrc  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  DEVELOPING.md  README.md  WORKSPACE  go.mod  go.sum
api/endpoint/v1/: BUILD.bazel  endpoint.proto
api/envoy/config/core/v3/: BUILD.bazel  address.proto  base.proto
api/envoy/data/accesslog/v3/: BUILD.bazel  accesslog.proto
api/envoy/data/tap/v3/: BUILD.bazel  common.proto  http.proto
api/logs/v1/: BUILD.bazel  logs.proto
api/middleware/v1/: BUILD.bazel  middleware.proto
cmd/server/: BUILD.bazel  envoy-bootstrap.yaml  main.go  temporalite.go
core/envoy/: BUILD.bazel  run.go
core/ids/: BUILD.bazel  uuid.go
core/log/: BUILD.bazel  logger.go
core/server/: BUILD.bazel  middleware.go  server.go
frontend/: .eslintrc.js  BUILD.bazel  package-lock.json  package.json
frontend/public/: index.html  site.webmanifest
frontend/src/: index.js  routes.js  theme.js
frontend/src/api/: Endpoints.js  Logs.js  Middleware.js
frontend/src/components/: InputExample.js  SimpleModal.js  TextInput.js
frontend/src/pages/: NotFound.js
frontend/src/pages/home/: Home.js
frontend/src/pages/home/components/: CustomTabPanel.js  EndpointsTab.js  ExtensionsTab.js  LogsTab.js  StatusIndicator.js
frontend/src/templates/: Main.js
images/: Dockerfile.build  README.md
server/api/: BUILD.bazel  build.go  endpoint.go  logs.go  middleware.go  utils.go
server/db/: BUILD.bazel  conn.go  migrations.go  types.go
server/db/sql/: BUILD.bazel  endpoints.sql  logs.sql  middlewares.sql  schema.sql
server/db/sql/migrations/: 00001_init.down.sql  00001_init.up.sql  00002_proxies.down.sql  00002_proxies.up.sql  00003_logs.down.sql  00003_logs.up.sql  00004_endpoints.down.sql  00004_endpoints.up.sql  BUILD.bazel  migrations.go
server/envoy/: BUILD.bazel  envoy.go  run.go
server/ingest/: BUILD.bazel  worker.go
server/watcher/: BUILD.bazel  watcher.go
