load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "temporalite.go",
    ],
    data = [
        "envoy-bootstrap.yaml",
        "//frontend:build",
    ],
    importpath = "github.com/apoxy-dev/proximal/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//api/endpoint/v1:endpoint",
        "//api/logs/v1:logs",
        "//api/middleware/v1:middleware",
        "//core/envoy",
        "//core/log",
        "//core/server",
        "//server/api",
        "//server/db",
        "//server/envoy",
        "//server/ingest",
        "//server/watcher",
        "@com_github_temporalio_temporalite//:temporalite",
        "@com_github_temporalio_ui_server_v2//server",
        "@com_github_temporalio_ui_server_v2//server/config",
        "@com_github_temporalio_ui_server_v2//server/server_options",
        "@io_temporal_go_sdk//client",
        "@io_temporal_go_sdk//worker",
        "@io_temporal_go_server//common/config",
        "@io_temporal_go_server//common/log/tag",
        "@io_temporal_go_server//common/primitives",
        "@io_temporal_go_server//temporal",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_exp//slog",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go.image",
    base = select({
        "@platforms//cpu:arm64": "@base_image_arm64//image",
        "@platforms//cpu:x86_64": "@base_image_amd64//image",
    }),
    embed = [":server_lib"],
    # Workaround for https://github.com/bazelbuild/rules_go/issues/1706
    env = {"GODEBUG": "netdns=go"},
    importpath = "github.com/apoxy-dev/proximal/cmd/server",
)

container_image(
    name = "image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    base = ":go.image",
    entrypoint = [
        "/app/cmd/server/go.image.binary",
    ],
    ports = [
        "8080",
        "9901",
        "9088",
        "18000",
    ],
    visibility = ["//visibility:public"],
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":image",
    registry = "docker.io",
    repository = "apoxy/proximal",
    tag = "{STABLE_GIT_SHA}-" + select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
)
