load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ids",
    srcs = ["uuid.go"],
    importpath = "github.com/apoxy-dev/proximal/core/ids",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_martinlindhe_base36//:base36",
    ],
)
