load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "envoy",
    srcs = ["envoy.go"],
    importpath = "github.com/apoxy-dev/proximal/server/envoy",
    visibility = ["//visibility:public"],
    deps = [
        "//api/endpoint/v1:endpoint",
        "//api/middleware/v1:middleware",
        "//core/log",
        "@com_github_envoyproxy_go_control_plane//envoy/config/accesslog/v3:accesslog",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/config/listener/v3:listener",
        "@com_github_envoyproxy_go_control_plane//envoy/config/route/v3:route",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/access_loggers/grpc/v3:grpc",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/common/tap/v3:tap",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/router/v3:router",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/tap/v3:tap",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/wasm/v3:wasm",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/network/http_connection_manager/v3:http_connection_manager",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/transport_sockets/tls/v3:tls",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/wasm/v3:wasm",
        "@com_github_envoyproxy_go_control_plane//envoy/service/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/service/discovery/v3:discovery",
        "@com_github_envoyproxy_go_control_plane//envoy/service/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/service/listener/v3:listener",
        "@com_github_envoyproxy_go_control_plane//envoy/service/route/v3:route",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/types",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/v3:cache",
        "@com_github_envoyproxy_go_control_plane//pkg/resource/v3:resource",
        "@com_github_envoyproxy_go_control_plane//pkg/server/v3:server",
        "@com_github_envoyproxy_go_control_plane//pkg/wellknown",
        "@com_github_gogo_status//:status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
